before receipe app

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 <p>{{ content }}!</p>
 
 <a href='{% url "articles:create" %}'>Create Article</a>
-<a href='{% url "articles:detail" slug="hello-world" %}'>Hello world article</a>
+<!-- <a href='{% url "articles:detail" slug="hello-world" %}'>Hello world article</a> --> -->
 <ul>
     {% for x in object_list %}
         {% if x.title %}
