--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -50,10 +50,11 @@
           </li> -->
 
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <form action="/articles/" method ="GET">
+      <input type = 'text'name ='q'/>
+      <input type = 'submit'/>
     </form>
+  
   </div>
 </div>
 </nav>
